
Changes
08/07/11 r190 Improved version.log entry generation and added rev to Changes
08/07/10 r189 Updated GeoIP.dat
08/07/10 r189 Updated MySQL libs detection routine
08/07/10 r189 Threads and Crypto are now on by default in Config [closes #508]
08/07/10 r189 Changed layout of the Changes file
08/05/31 r187 Updated svn url in dm script

Fixes
08/07/14 r192 Fixed corrupt chanstats counts on some systems [closes #507]
08/05/31 r187 Fixed LOG_PROTOCOL showing even with protocoldebug off
08/05/19 r186 Fixed exclude setting wrong flag on db save [closes #496]
08/05/18 r185 Fixed compiling on Windows

Removals
n/a

Developers
Denora Team <dev@denorastats.org>

Contributors
n/a



Denora Version 1.4.0
--------------------
Provided by Denora Team <dev@denorastats.org> - 2008
05/15 A Now should compile on 64 bit Windows systems              [ #00]
05/15 A PSDK 2008 support                                         [ #00]
04/28 A Improved channel TS support                               [ #00]
02/28 A Chan messages from excluded users now counted globally    [ #00]
05/06 U Updated GeoIP.dat                                         [ #00]
05/03 F Fixed crash on some kicks for whatever reason             [#491]
05/03 F Fixed SQL problems with ircds with long channel names     [ #00]
04/28 F Improved inspircd FJOIN/FMODE support                     [ #00]
02/29 F Fixed possible segfault on restart                        [ #00]
02/29 F Fixed MODE not handled correctly in inspircd11            [ #00]
02/27 F Fixed segfault on certain inspircd11 FMODE events         [#485]
02/26 F Fixed inspircd11 +j/+J mode data not written to sql       [ #00]
02/26 F Fixed crash on truncated inspircd11 PUSH message          [#489]
02/17 F Added missing user modes to UltimateIRCd                  [#488]

Provided by Jobe <jobe@mdbnet.co.uk>
05/05 F Fixed +f mode handling in nefarious                       [ #00]
04/28 F Fixed not updating p10 vhost in sql in some cases         [#501] 