@@ -9,9 +9,12 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="1"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="192"
+VERSION_BUILD="193"
 
 # $Log$
+#
+# 2008-07-18 12:34:18 1.4.1.193 (SVN) hal9000 [#509]
+# > Fixed various Charybdis issues
 #
 # 2008-07-14 20:14:27 1.4.1.192 (SVN) hal9000 [#507]
 # > Fixed corrupt chanstats counts on some systems
